1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Include -I for libobjc.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* GammaDist.m: Include misc.h instead of math.h.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am: Remove addition of -Wno-protocol to CPPFLAGS.

1998-10-29  Alex Lancaster  <alex@santafe.edu>

	* generators.h (SimpleRandomGenerator, SplitRandomGenerator: Put
	protocol conformance on same line as protocol line for correct
	parsing by DSSSL.

1998-10-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ACGgen.m, C2LCGXgen.m, C2MRG3gen.m, C2TAUSgen.m, C3MRG3gen.m,
	C4LCGXgen.m, LCGgen.m, MRGgen.m, MT19937gen.m, MWCAgen.m,
	MWCBgen.m, PMMLCGgen.m, PSWBgen.m, RWC2gen.m, RWC8gen.m, SCGgen.m,
	SWBgen.m, TGFSRgen.m: Make i, j, and g unsigned in -setState,
	-putStateInto, initState:, -describe:, and setStateFrom: (some of
	these cases don't exist).  Use %u instead of %d as appropriate.
	New method -reset.  Reformatting throughout.

	* BernoulliDist.m, ExponentialDist.m, GammaDist.m,
	LogNormalDist.m, NormalDist.m, RandomBitDist.m,
	UniformDoubleDist.m, UniformIntegerDist.m, UniformUnsignedDist.m:
	Reformatting throughout.
	
	* C2MRG3gen.h (C2MRG3gen): Make k unsigned.

	* C2LCGXgen.h, C2MRG3gen.h, C2TAUSgen.h, C4LCGXgen.h (COMPONENTS,
	SEEDS): Make unsigned.

	* ACgen.h, BernoulliDist.h, C2LCGXgen.h, C2MRG3gen.h, C2TAUSgen.h,
	C3MWCgen.h, C4LCGXgen.h, ExponentialDist.h, GammaDist.h, LCGgen.h,
	LogNormalDist.h, MRGgen.h, MT19937gen.h, MWCAgen.h, MWCBgen.h,
	NormalDist.h, PMMLCGgen.h, PSWBgen.h, RWC2gen.h, RWC8gen.h,
	RandomBitDist.h, SCGgen.h, SWBgen.h, TGFSRgen.h,
	UniformDoubleDist.h, UniformIntegerDist.h, UniformUnsignedDist.h:
	Add creating, setting, and using phases.
