@@ -1,3 +1,7 @@
+1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* C4LCGXgen.m, C2LCGXgen.m: Include misc.h instead of limits.h.
+
 1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (INCLUDES): Include -I for libobjc.
